Add module descriptors